fix scrollbar

--- a/themes/documentation/source/css/_partial/body.scss
+++ b/themes/documentation/source/css/_partial/body.scss
@@ -47,6 +47,9 @@
     .nav {
       max-height: 400px;
       overflow: auto;
+      &::-webkit-scrollbar {
+        display: none;
+      }
     }
 
     .nav-control {
