--- a/themes/documentation/source/css/_partial/common.scss
+++ b/themes/documentation/source/css/_partial/common.scss
@@ -28,7 +28,3 @@ a {
   clear: both;
   zoom: 1;
 }
-
-::-webkit-scrollbar {
-display: none;
-}
